--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,13 +1,10 @@
-# set(TEST_LIBS ${TEST_LIBS} ${CHECK_LIBRARIES} judy libr3)
-# set(TEST_LIBS ${TEST_LIBS} ${CHECK_LIBRARIES} judy libr3)
 enable_testing()
 find_package(Check REQUIRED)
-# find_package(Judy REQUIRED)
 
 if (NOT CHECK_FOUND)
     message(STATUS "Skipping unit tests, Check library not found!")
 else (NOT CHECK_FOUND)
-    set(TEST_LIBS ${LIBS} ${CHECK_LIBRARIES} ${PCRE_LIBRARIES} r3)
+    set(TEST_LIBS ${LIBS} ${CHECK_LIBRARIES} libh3)
 
     include_directories(${CHECK_INCLUDE_DIRS})
     # include_directories("${PROJECT_SOURCE_DIR}/include/r2")
