improved Makefile for manual builds.
Unfortunately the shared library was not build as a .so-file. While adding the statements to create the .so file, several other improvements were made.
 * .PHONY and cleaning objects
 *  static library creation (.a)
 * shared library creation (.so)
 * creation of test executable based on parser.c

tested with "make -f Makefile.dist"

--- a/Makefile.dist
+++ b/Makefile.dist
@@ -5,22 +5,38 @@
 
 #CFLAGS = -Os -Wall -Wextra -Werror \
 #	 $(SOURCE_FLAGS) -g \
-#	 -std=gnu99
-# -D NDEBUG
+#	 -std=gnu99 \
+# -DNDEBUG
+
+OBJ =  src/header_field.o src/header_field_list.o src/request_header.o src/hash.o src/mempool.o
 
 CFLAGS += -std=c99 -Iinclude -Isrc -Wall -ggdb -O2
 LDFLAGS = -lpthread
 
-%.o: %.c $(DEPS)
-	$(CC) -static -fpic -c -o $@ $< $(CFLAGS)
+LIBH3_A = libh3.a
+LIBH3_SO = libh3.so
+LIBH3 = $(LIBH3_A) $(LIBH3_SO)
+EXECUTABLE = test
 
-OBJ = parser.o src/header_field.o src/header_field_list.o src/request_header.o src/hash.o src/mempool.o
+all: $(EXECUTABLE) $(LIBH3)
 
-libh3: $(OBJ)
-	gcc -shared -o libh3.a $^ $(CFLAGS)
+src/%.o: src/%.c
+	@$(CC)  -fpic -c -o $@ $< $(CFLAGS)
 
-all: libh3
-	# gcc -o test test.c libh3.a $(CFLAGS)
+parser.o: parser.c
+	@$(CC) -c -o $@ $< $(CFLAGS)
+
+$(EXECUTABLE): parser.o $(LIBH3_A)
+	@gcc -o $(EXECUTABLE) parser.o  $(LIBH3_A) $(CFLAGS) $(LDFLAGS)
+
+$(LIBH3_SO): $(OBJ)
+	@gcc -shared -Wl,-soname,$(LIBH3_SO) -o $(LIBH3_SO) $^ $(CFLAGS)
+
+$(LIBH3_A): $(OBJ)
+	@ar -cr $@ $^
+	@ranlib $@
+
+.PHONY: clean
 
 clean:
-	rm -rf $(OBJ)
+	@rm -rf $(EXECUTABLE) parser.o $(OBJ)
